Suspended OfflineAudioContext objects are leaking https://bugs.webkit.org/show_bug.cgi?id=224333

Reviewed by Darin Adler.

Source/WebCore:

When offline rendering is suspended, we now release the ActiveDOMObject::PendingActivity we hold
to keep the OfflineAudioContext and its wrapper alive during rendering. The JS has to keep a
reference to the context's wrapper anyway if they ever want to resume rendering.

Test: webaudio/OfflineAudioContext/offlineaudiocontext-leak-while-suspended.html

* Modules/webaudio/OfflineAudioContext.cpp:
(WebCore::OfflineAudioContext::didSuspendRendering):

LayoutTests:

Add layout test coverage.

* webaudio/OfflineAudioContext/offlineaudiocontext-leak-while-suspended-expected.txt: Added.
* webaudio/OfflineAudioContext/offlineaudiocontext-leak-while-suspended.html: Added.


Canonical link: https://commits.webkit.org/236315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275679 268f45cc-cd09-0410-ab3c-d52691b4dbfc